--- a/src/components/BackCall/BckCall.scss
+++ b/src/components/BackCall/BckCall.scss
@@ -118,41 +118,20 @@
     }
 }
 
-@media screen and(max-width:1150px) {
-    // .imgholder {
-    //     // position: absolute;
-    //     position: absolute;
-    //     display: inline;
-    //     left: 75%;
-    //     width: 600px;
-    //     height: 600px;
-    //     z-index: 50;
-
-    //     img {
-    //         z-index: 4;
-    //         position: relative;
-    //         display: inline;
-    //         top: -100px;
-    //         width: 600px;
-    //         height: 600px;
-    //         // bottom: 100px;
-    //     }
-
-    // }
-        
+@media screen and(max-width:1080px) {
     .backcall {
         // overflow: hidden;
         height: fit-content;
         min-height: 1000px;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
-        background:url('./../../imgs/purepng.png') top right -150px no-repeat,
+        background: url('./../../imgs/purepng.png') top right -150px no-repeat,
             url('./../../imgs/fog.png') bottom no-repeat,
-            url('./../../imgs/chefBackCall.png') 55% no-repeat,
-            url('./../../imgs/milk.png') right no-repeat;
+            url('./../../imgs/chefBackCall.png') bottom (left -100px) no-repeat,
+            url('./../../imgs/mikl_reverse.png') bottom (left -100px) no-repeat;
 
-        background-size: 400px,auto,auto,auto,;
+        background-size: 400px, auto, auto 50%,auto 60%;
         .wrap {
             margin-left: 10%;
         }
@@ -164,6 +143,7 @@
 
         &__imag {
             display: inline;
+
             // z-index: 400;
             img {
                 z-index: 4;
