--- a/src/components/AboutUs/AboutUs.scss
+++ b/src/components/AboutUs/AboutUs.scss
@@ -115,16 +115,147 @@
     }
 }
 
-@media screen and(max-width:1150px) {
-
+@media screen and(max-width:1080px) {
     .about_us {
         height: fit-content;
         background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
-            url('./../../imgs/chef_aboutus.png') bottom (right -70px) no-repeat,
+            url('./../../imgs/chef_aboutus.png') bottom (right -60px) no-repeat,
             url('./../../imgs/fog_rev.png') top/ contain no-repeat,
             url('./../../imgs/aboutUsBG.png') bottom/ cover no-repeat;
 
-        background-size: auto, 400px, auto, auto;
+        background-size: auto, 530px, auto, auto;
+        min-height: fit-content;
+
+        .chocolate {
+            // position: relative;
+            // float: right;
+            // z-index: 4;
+            display: none;
+        }
+
+        .container {
+            display: flex;
+            grid-template-columns: 1fr;
+        }
+
+        &__content {
+            position: relative;
+            z-index: 2;
+
+            &__text {
+                &__title {
+                    font-family: Gilroy;
+                    font-size: 64.485px;
+                    line-height: 78px;
+
+                    h3 {
+                        margin-bottom: 20px;
+                        margin-top: 30px;
+                        text-align: center;
+                    }
+                }
+
+                &__description {
+                    p {
+                        font-family: Gilroy;
+                        font-weight: 500;
+                        // font-size: 20.0627px;
+
+                        font-size: 48px;
+                        width: auto;
+                        // line-height: 24px;
+
+                        line-height: 58px;
+                    }
+                }
+
+                &__grid {
+                    display: grid;
+                    grid-template-columns: 40%;
+                    // grid-template-columns: 1fr 1fr;
+                    grid-row-gap: 27px;
+                    // grid-column-gap: 38px;
+                    width: 100%;
+                    text-align: center;
+
+                    &__elem {
+                        display: flex;
+                        align-items: center;
+                        min-height: 110px;
+                        width: 100%;
+                        background: #FFFFFF;
+                        box-sizing: border-box;
+                        border-radius: 5px;
+
+                        .wrap {
+                            display: flex;
+                            align-items: center;
+                            margin: 0 auto;
+                            width: 90%;
+                            height: 90px;
+                            border: 0.2px dashed #000000;
+                            border-radius: 5px;
+
+                            p {
+                                font-family: Gilroy;
+                                font-style: normal;
+                                width: auto;
+                                padding: 10px;
+                                margin: 0 auto;
+                                font-weight: 500;
+                                font-size: 15px;
+                                line-height: 18px;
+                                text-align: center;
+                            }
+                        }
+
+                    }
+                }
+
+            }
+
+            &__button {
+                margin-top: 60px;
+                display: flex;
+                justify-content: center;
+                position: relative;
+                top: 100px;
+
+                button {
+                    font-family: Gilroy;
+                    font-weight: 500;
+                    font-size: 20px;
+                    width: 295px;
+                    height: 80px;
+                }
+            }
+        }
+
+        &__image {
+            position: relative;
+            top: 100px;
+            z-index: 1;
+            display: flex;
+            justify-self: flex-end;
+            align-items: flex-end;
+            vertical-align: bottom;
+        }
+    }
+
+
+
+}
+
+/* Landscape phones and smaller */
+@media (max-width: 480px) {
+    .about_us {
+        height: fit-content;
+        background: url('./../../imgs/fog.png') bottom/ contain no-repeat,
+            url('./../../imgs/chef_aboutus.png') bottom (right -60px) no-repeat,
+            url('./../../imgs/fog_rev.png') top/ contain no-repeat,
+            url('./../../imgs/aboutUsBG.png') bottom/ cover no-repeat;
+
+        background-size: auto, 300px, auto, auto;
         min-height: fit-content;
 
         .chocolate {
@@ -196,6 +327,7 @@
                                 font-family: Gilroy;
                                 font-style: normal;
                                 width: auto;
+                                padding: 10px;
                                 margin: 0 auto;
                                 font-weight: 500;
                                 font-size: 15px;
@@ -215,6 +347,7 @@
                 justify-content: center;
                 position: relative;
                 top: 100px;
+
                 button {
                     font-family: Gilroy;
                     font-weight: 500;
@@ -238,11 +371,4 @@
 
 
 
-}
-
-/* Landscape phones and smaller */
-@media (max-width: 480px) {
-    .about_us__content__text__grid__elem .wrap p {
-        padding: 10px
-    }
 }
