--- a/src/components/Academy/Academy.scss
+++ b/src/components/Academy/Academy.scss
@@ -100,7 +100,7 @@
     }
 }
 
-@media screen and(max-width:1150px) {
+@media screen and(max-width:1080px) {
     .academy {
         height: fit-content;
         background: url('./../../imgs/moloko.png') right top no-repeat;
@@ -108,6 +108,8 @@
 
 
         &__text {
+            text-align: center;
+
             &__title {
                 font-family: Gilroy;
                 font-size: 64.485px;
