--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -94,7 +94,125 @@
     }
 }
 
-@media screen and (max-width:1150px) {
+@media screen and (max-width:1080px) {
+    .header {
+        overflow: hidden;
+        height: 100vh;
+        // max-height: 630px;
+
+        background: url('./../../imgs/strawberry.png') (top 90%) (right 25%) no-repeat,
+            url('./../../imgs/milk.png') (top 100%) (right -100px) no-repeat,
+            url('./../../imgs/cake.png') (top 100%) (right -100px) no-repeat,
+            url('./../../imgs/blueberries.png') -30px 500px no-repeat,
+            radial-gradient(45.68% 34.05% at 86.85% 64.2%,
+                #FFFFFF 0%, #F0C2DB 100%, #F0C2DB 100%);
+
+        // background: url('./../../imgs/strawberry.png') (center) (right 55%) no-repeat,
+        //     url('./../../imgs/milk.png') center (right) no-repeat,
+        //     url('./../../imgs/cake.png') center right no-repeat,
+        //     url('./../../imgs/blueberries.png') 0 500px no-repeat,
+        //     radial-gradient(33.45% 49.42% at 74.62% 53.25%,
+        //         #FFFFFF 0%, #F0C2DB 100%, #F0C2DB 100%);
+
+        background-size: 20%, 65%, 65%, 140px, auto; //50%
+
+        .grid {
+            display: block;
+            // grid-template-columns: 50% 50%;
+        }
+
+        &__content {
+            &__text {
+                &__title {
+                    font-family: Gilroy;
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 54px;
+                    line-height: normal;
+                    color: #272727;
+                }
+
+                &__description {
+                    // width: 535px;
+                    width: 90%; //
+                    // font-size: 14px; //
+                    font-size: 27px;
+                    line-height: normal;
+                }
+            }
+
+            &__button-holder {
+                margin-top: 0;
+                width: fit-content;
+                height: fit-content;
+                display: flex;
+                align-content: center;
+                align-items: center;
+                vertical-align: middle;
+
+                // background: url('./../../imgs/raspberry.png');
+                button {
+                    // width: 210px;
+                    // width: 210px;
+                    // position: relative;
+                    // z-index: -1;
+                    height: 70px;
+                    font-family: Gilroy;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 14px;
+                    line-height: 22px;
+                    text-align: center;
+                }
+
+                &__raspberry {
+                    position: relative;
+                    // bottom: 40px;
+                    // left: 65px;
+                    // align-self: center;
+                    width: 85px;
+                    margin-bottom: 70px;
+                    margin-left: 20px;
+                }
+
+                .img-container {
+                    position: absolute;
+                }
+
+                &__blueberries {
+                    position: relative;
+                    bottom: 50px;
+                    left: 10px;
+                }
+            }
+        }
+
+        &__image {
+            &__cake {
+                position: relative;
+                bottom: 200px;
+                width: 800px;
+                height: auto;
+                // height: 740px;
+            }
+
+            &__milk {
+                position: relative;
+                bottom: 945px;
+                right: 125px;
+            }
+
+            &__strawberry {
+                position: relative;
+                bottom: 1400px;
+                left: 150px;
+
+            }
+        }
+    }
+}
+
+@media screen and (max-width:480px) {
     .header {
         overflow: hidden;
         height: 100vh;
@@ -134,7 +252,7 @@
 
                 &__description {
                     // width: 535px;
-                    width: auto; //
+                    width: 90%; //
                     font-size: 14px; //
                     line-height: normal;
                 }
